--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- modernizer script needs to be in the head section -->
+    <script src="js/lib/modernizr-2.6.2.min.js"></script>
+  </head>
+  <body>
+    <ul id="songs" class="vehicles"></ul>
 
-        <script src="js/lib/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <ul id="vehicleTemplate">
-        </ul>
 
-        <script src="js/lib/jquery-min.js"></script>
-        <script src="js/lib/underscore-min.js"></script>
-        <script src="js/lib/backbone-min.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+      <!-- <script id="songTemplate" type="text/template">
+    <%= title %>
+     <button>Listen</button>
+     <% if(plays > 1000) { %>
+        <span class="popular">Popular</span>
+     <% } %>
+    </script>
+    -->
+
+    <script id="vehicleTemplate" type="text/template">
+      <%= registrationNumber %>
+       <button class="delete">Delete</button>
+    </script> 
+
+    <script src="js/lib/jquery-min.js"></script>
+    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/lib/backbone-min.js"></script>
+    <!-- <script src="js/main.js"></script> -->
+    <!-- <script src="js/mainSong.js"></script> -->
+    <script src="js/mainVehicle.js"></script>
+  </body>
 </html>
